include international tel input capability
add resources needed on the tel input

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,4 +44,8 @@
 </div>
 <!-- /page -->
 </body>
+<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="intl-phone/js/intlTelInput.js" data-turbolinks-track="true"></script>
+<script src="intl-phone/libphonenumber/build/utils.js" data-turbolinks-track="true"></script>
+<script src="js/clicktocall.js" data-turbolinks-track="true"></script>
 </html>
