include suggestions raised during code review
added links to Twilio Java Helper Library, Spring Boor MVC Getting
Started and fix small typo.

--- a/tutorial/index.jade
+++ b/tutorial/index.jade
@@ -34,6 +34,8 @@
       **See Also:**
       * [Twilio REST API](//www.twilio.com/docs/api/rest)
       * [TwiML Say Verb](//www.twilio.com/docs/api/twiml/say)
+      * [Twilio Java Helper Library](//www.twilio.com/docs/java/install)
+      * [Spring Boot MVC Getting Started](//spring.io/guides/gs/serving-web-content/)
 
   .step(data-title='Environment', data-file='.env.example')
     :markdown
@@ -76,7 +78,7 @@
       * Submits that form data to our controller
       * Let's the user know if the submission was successful or not
 
-      This is a pretty common implementation of jQuery's $.ajax() method, but notice that we are
+      This is a pretty common implementation of jQuery's `$.ajax()` method, but notice that we are
       returning the response message when the call has connected.
 
       Now that we have the front-end done, let's build the backend that will receive this data and
@@ -162,13 +164,13 @@
       If you're a Java developer working with Twilio, you might enjoy these
       other tutorials:
 
-      [**Automated Survey**](//www.twilio.com/docs/howto/walkthrough/automated-survey/java/spark)
+      [**Automated Survey**](//https://www.twilio.com/docs/tutorials/walkthrough/automated-survey/java/spring)
 
       Instantly collect structured data from your users with a survey
       conducted over a voice call or SMS text messages. Learn how to create
       your own survey in Java.
 
-      [**SMS and MMS Notifications**](//www.twilio.com/docs/howto/walkthrough/server-notifications/java/spark)
+      [**SMS and MMS Notifications**](//https://www.twilio.com/docs/tutorials/walkthrough/server-notifications/java/spring)
 
       Send SMS alerts to a list of system administrators if something goes wrong on your server.
 
