Remove Servlets reference and broken links.

--- a/tutorial/index.jade
+++ b/tutorial/index.jade
@@ -37,7 +37,7 @@
       * [Twilio Java Helper Library](//www.twilio.com/docs/java/install)
       * [Spring Boot MVC Getting Started](//spring.io/guides/gs/serving-web-content/)
 
-  .step(data-title='Environment', data-file='.env.example')
+  .step(data-title='Environment', data-file='.env.example', data-mode='dot')
     :markdown
       ## Environment
 
@@ -49,7 +49,7 @@
       You can find your Twilio credentials in your [Account Dashboard](//www.twilio.com/user/account).
 
       For more instructions on how to run the application refer to the [app's
-      readme file](//github.com/TwilioDevEd/clicktocall-servlets/blob/master/README.md).
+      readme file](//github.com/TwilioDevEd/clicktocall-spring/blob/master/README.md).
 
   .step(data-title='The Web Form', data-file="src/main/resources/templates/index.html", data-highlight="26-40")
     :markdown
@@ -166,13 +166,13 @@
       If you're a Java developer working with Twilio you might enjoy these
       other tutorials:
 
-      [**Automated Survey**](//https://www.twilio.com/docs/tutorials/walkthrough/automated-survey/java/spring)
+      [**Automated Survey**](//www.twilio.com/docs/tutorials/walkthrough/automated-survey/java/spring)
 
       Instantly collect structured data from your users with a survey
       conducted over a voice call or SMS text messages. Learn how to create
       your own survey in Java.
 
-      [**SMS and MMS Notifications**](//https://www.twilio.com/docs/tutorials/walkthrough/server-notifications/java/spring)
+      [**SMS and MMS Notifications**](//www.twilio.com/docs/tutorials/walkthrough/server-notifications/java/spring)
 
       Send SMS alerts to a list of system administrators if something goes wrong on your server.
 
