Remove user's name reference

--- a/tutorial/index.jade
+++ b/tutorial/index.jade
@@ -56,8 +56,8 @@
       ## The Web Form
 
       The first step on creating a real click-to-call solution is by building the form that your
-      user needs to fill on the web. No need to overthink this, the real goal is to POST the User's name
-      and phone number to your controller.
+      user needs to fill on the web. No need to overthink this, the real goal is to POST the User's
+      phone number to your controller.
 
       So what information does this form need? An input for the phone number and
       a submit button. Since the page doesn't need to render new content after clicking
