--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,9 +32,15 @@
                         Enter your phone number below, and our team will contact you right away.
                     </p>
                 </div>
+                <label>Your number</label>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="phone" id="phoneNumber"
-                           placeholder="(651) 555-7889" />
+                    <input class="form-control" type="text" name="userPhone" id="userPhone"
+                           placeholder="(651) 555-7889"/>
+                </div>
+                <label>Sales team number</label>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="salesPhone" id="salesPhone"
+                           placeholder="(651) 555-7889"/>
                 </div>
                 <button type="submit" class="btn btn-default">Contact Sales</button>
             </form>
