Update tutorial to reference Dial verb

--- a/tutorial/index.jade
+++ b/tutorial/index.jade
@@ -23,11 +23,14 @@
 
       ## What We Will Learn
 
-      This How-To demonstrates how to initialize a call using the [Twilio REST
-      API](//www.twilio.com/docs/api/rest) and how to create a TwiML call logic using the
-      [Say](//www.twilio.com/docs/api/twiml/say) verb.
+      This How-To demonstrates initializing a call using the [Twilio REST API][rest]
+      and creating TwiML call logic using the [Say][say] and [Dial][dial] verbs.
 
-      Sounds like a plan? Let's get started!
+      Sound like a plan? Let's get started!
+
+      [rest]: //www.twilio.com/docs/api/rest/
+      [dial]: //www.twilio.com/docs/api/twiml/dial
+      [say]:  //www.twilio.com/docs/api/twiml/say
 
       ---
 
@@ -51,7 +54,7 @@
       For more instructions on how to run the application refer to the [app's
       readme file](//github.com/TwilioDevEd/clicktocall-spring/blob/master/README.md).
 
-  .step(data-title='The Web Form', data-file="src/main/resources/templates/index.html", data-highlight="26-40")
+  .step(data-title='The Web Form', data-file="src/main/resources/templates/index.html", data-highlight="26-46")
     :markdown
       ## The Web Form
 
@@ -108,7 +111,7 @@
       [url]: //www.twilio.com/docs/api/rest/making-calls#url-parameter
 
   .step(data-title='The connect endpoint', data-file='src/main/java/com/twilio/clicktocall/ConnectController.java',
-    data-highlight='27-34')
+    data-highlight='27-35')
     :markdown
       ## The connect endpoint
 
@@ -116,7 +119,7 @@
       means that we need to create an endpoint that is publicly available for internet requests.
 
   .step(data-title='Validating Twilio Request', data-file='src/main/java/com/twilio/clicktocall/ConnectController.java',
-    data-highlight='29')
+    data-highlight='30')
     :markdown
       ## Validating Twilio Request
 
@@ -135,14 +138,13 @@
 
       [utils]: //github.com/twilio/twilio-java/blob/next-gen/src/main/java/com/twilio/security/RequestValidator.java
 
-  .step(data-title='Generating TwiML', data-file='src/main/java/com/twilio/clicktocall/twilio/TwiMLUtil.java', data-highlight='9-14')
+  .step(data-title='Generating TwiML', data-file='src/main/java/com/twilio/clicktocall/twilio/TwiMLUtil.java', data-highlight='11-18')
     :markdown
       ## Generating TwiML
 
       TwiML is a set of [simple verbs][verbs] written in XML that Twilio reads as instructions.
-      In this case our instructions inform Twilio to simply SAY something to the user. If we wanted
-      to connect the user to a real support agent, we would have to add a
-      [Dial verb](//www.twilio.com/docs/api/twiml/dial) that specifies the support agent number
+      In this case our instructions inform Twilio to [SAY](https://www.twilio.com/docs/api/twiml/say)
+      something to the user and then  [DIAL](//www.twilio.com/docs/api/twiml/dial) the support agent's number
       so the customer can talk to him/her.
 
       In order to make writing TwiML easy, many of the helper libraries have methods that generate
